Update LogsAnalyzer.java